5 hw final commit

--- a/HW_05/05_01/index.html
+++ b/HW_05/05_01/index.html
@@ -4,29 +4,30 @@
     <meta charset="utf-8">
     <title>Cycling</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
   </head>
   <body>
-      <div class="header_blue_line">
-        <div class="menu">
-          <ul class="menu_second">
-            <li>Ola! <a href="#">Cadastre-se</a> ou <a>Entrar</a></li>
-            <li><a href="#">Minhas Ofertas</a></li>
-          </ul>
-            <ul class="menu_first">
-
-              <li><img src="img/flag.png" alt="flag"></li>
-              <li><a href="#">Ajuda</a></li>
-              <li><a href="#">Contato</a></li>
-              <li><a href="#">Forum</a></li>
-              <li><a href="#">Vender</a></li>
-              <li><a href="#">Meu YouBike</a></li>
-            </ul>
-        </div>
+    <div class="header_blue_line">
+      <div class="menu">
+        <ul class="menu_second">
+          <li>Ola! <a href="#">Cadastre-se</a> ou <a>Entrar</a></li>
+          <li><a href="#">Minhas Ofertas</a></li>
+        </ul>
+        <ul class="menu_first">
+          <li><img src="img/flag.png" alt="flag"></li>
+          <li><a href="#">Ajuda</a></li>
+          <li><a href="#">Contato</a></li>
+          <li><a href="#">Forum</a></li>
+          <li><a href="#">Vender</a></li>
+          <li><a href="#">Meu YouBike</a></li>
+        </ul>
       </div>
-      <div class="form">
-
+    </div>
+    <div class="form">
+      <div class="form_first">
         <p>Cadastre-see</p>
-
+      </div>
+      <div class="form_second">
         <div class="facebook">
           <img src="img/facebook.png" alt="Facebook">
         </div>
@@ -36,27 +37,22 @@
           </fieldset>
         </div>
         <form action="#">
-            <input type="text" name="first_name" placeholder="First Name" class="input">
-            <input type="text" name="last_name" placeholder="Last Name"class="input" class="input">
-            <input type="text" name="email_address" placeholder="Email Address" class="input">
-            <input type="password" name="password" placeholder="Choose Password" class="input">
-            <input type="password" name="password" placeholder="Password Confim" class="input">
-            <div class="checkbox">
-              <input type="checkbox" id="Send me Youbike updates and tipes">
-              <label for="Send me Youbike updates and tipes">Send me Youbike updates and tipes</label>
-            </div>
-            <input type="submit" value="Create my Account" class="button">
-            <div class="text">
-              <p>By clicking the button above, you agree to the Terms of Service.</p>
-              <p>Xiew our Privacy Policy</p>
-            </div>
+          <input type="text" name="first_name" placeholder="First Name" class="input">
+          <input type="text" name="last_name" placeholder="Last Name"class="input" class="input">
+          <input type="text" name="email_address" placeholder="Email Address" class="input">
+          <input type="password" name="password" placeholder="Choose Password" class="input">
+          <input type="password" name="password" placeholder="Password Confim" class="input">
+          <div class="checkbox">
+            <input type="checkbox" id="Send me Youbike updates and tipes">
+            <label for="Send me Youbike updates and tipes">Send me Youbike updates and tipes</label>
+          </div>
+          <input type="submit" value="Create my Account" class="button">
+          <div class="text">
+            <p>By clicking the button above, you agree to the Terms of Service.</p>
+            <p>Xiew our Privacy Policy</p>
+          </div>
         </form>
-
-
-
       </div>
-
-
-
+    </div>
   </body>
 </html>
