--- a/HW_05/05_01/index.html
+++ b/HW_05/05_01/index.html
@@ -10,7 +10,7 @@
     <div class="header_blue_line">
       <div class="menu">
         <ul class="menu_second">
-          <li>Ola! <a href="#">Cadastre-se</a> ou <a>Entrar</a></li>
+          <li>Ola! <a href="#">Cadastre-se</a> ou <a href="#">Entrar</a></li>
           <li><a href="#">Minhas Ofertas</a></li>
         </ul>
         <ul class="menu_first">
@@ -41,10 +41,10 @@
           <input type="text" name="last_name" placeholder="Last Name"class="input" class="input">
           <input type="text" name="email_address" placeholder="Email Address" class="input">
           <input type="password" name="password" placeholder="Choose Password" class="input">
-          <input type="password" name="password" placeholder="Password Confim" class="input">
+          <input type="password" name="password" placeholder="Password Confirm" class="input">
           <div class="checkbox">
             <input type="checkbox" id="Send me Youbike updates and tipes">
-            <label for="Send me Youbike updates and tipes">Send me Youbike updates and tipes</label>
+            <label for="Send me Youbike updates and tipes">Send me Youbike updates and tips</label>
           </div>
           <input type="submit" value="Create my Account" class="button">
           <div class="text">
